fixed not centered alert

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -102,6 +102,7 @@ img {
     background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
